--- a/assets/style.css
+++ b/assets/style.css
@@ -73,18 +73,22 @@ header .wrapper {
 }
 
 header .logo {
-    height: 45px;
+    height: 40px;
 }
 
 header .logo-p {
-    font-size: 25px;
+    font-size: 20px;
+}
+
+header .social-network img {
+    height: 40px;
 }
 
 header .social-network {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 233px;
+    width: 190.42px;
 }
 
 header .home {
@@ -96,13 +100,11 @@ header .home:hover {
 }
 
 .l-img {
-    height: 40px; 
-    margin: 5px;
-    }
+    margin-right: 10px;
+}
 
 .r-img {
-    height: 47px; 
-    margin: 5px;
+    margin-left: 10px;
 }
 
 .f {
@@ -144,6 +146,10 @@ header .home:hover {
     display: flex;
 }
 
+.hover:hover {
+    opacity: 0.5;
+}
+
 main {
     display: flex;
     flex-direction: column;
@@ -152,6 +158,7 @@ main {
     background: linear-gradient(180deg, #1F2652 0%, #E6DB9D 49.2%, #1F2652 100%);
     color: white;
     flex-grow: 1;
+    hyphens: auto;
 }
 
 .exception {
@@ -168,6 +175,18 @@ main {
 
 .exception3 {
     background: linear-gradient(180deg, #E6DB9D 0%, #1F2652 100%);
+}
+
+.exception4 {
+    background: linear-gradient(180deg, #E6DB9D 0%, #E6DB9D 100%);
+}
+
+.exception4 h3 a {
+    color: #1f2652ab;
+}
+
+.exception4 h3 a:hover {
+    color: #1f2652;
 }
 
 .main-img {
@@ -194,6 +213,11 @@ main .wrapper1 {
     flex-direction: row;
 }
 
+.wrapper11 {
+    display: flex;
+    flex-direction: row;
+}
+
 .info {
     display: flex;
     align-items: center;
@@ -207,6 +231,7 @@ main .wrapper1 {
 }
 
 .info img { 
+    margin-left: 5px;
     height: 80px; 
 }
 
@@ -214,6 +239,15 @@ main .wrapper1 {
     width: 100%;
     max-width: 1920px;
     border: 1px dashed #426873;
+}
+
+.photo {
+    width: 666px; 
+    height: 457px; 
+    margin: 0 30px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 100px;
 }
 
 .photo1 {
@@ -245,6 +279,7 @@ main .wrapper1 {
 }
 
 .card1 {
+    padding: 10px;
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -276,8 +311,7 @@ main .wrapper1 {
     font-size: 15px;
     color: white;
     border-radius: 10px;
-    height: 30px;
-    width: 200px;
+    padding: 10px;
     cursor: pointer;
 }
 
@@ -445,6 +479,17 @@ footer .wrapper {
 /*MARK: Adaptive
 */
 
+@media (max-width: 1476px) {
+    .photo {
+        width: 526px; 
+        height: 357px; 
+    }
+
+    .grid {
+        grid-template-columns: 1fr;
+    }
+}
+
 @media (max-width: 1344px) {
     .news-section {
         width: 1040px;
@@ -452,6 +497,20 @@ footer .wrapper {
 }
 
 @media (max-width: 1200px) {
+    .card {
+        width: 629px;
+        height: 473px;
+    }
+
+    .wrapper11 {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .photo {
+        margin: 30px 0;
+    }
+
     h1 { 
         font-size: 35px;  
     }
@@ -469,11 +528,11 @@ footer .wrapper {
     }
 
     header .logo {
-        height: 40px;
+        height: 35px;
     }
 
     header .logo-p {
-        font-size: 20px;
+        font-size: 15px;
     }
 
     .title {
@@ -497,13 +556,13 @@ footer .wrapper {
     }
 
     header .social-network {
-        width: 190px;
+        width: 147.83px;
     }
 
     .f {
         display: flex;
         justify-content: center;
-        width: 90px;
+        width: 100px;
     }
 
     header .home {
@@ -523,7 +582,16 @@ footer .wrapper {
     }
 }
 
-@media (max-width: 1080px) {
+@media (max-width: 1040px) {
+    .card1 input {
+        width: 540px;
+    }
+
+    .card {
+        width: 589px;
+        height: 433px;
+    }
+
     .grid1 {
         grid-template-columns: 1fr 1fr;
     }
@@ -541,15 +609,15 @@ footer .wrapper {
     }
 
     header a {
-        font-size: 15px;
+        font-size: 18px;
     }
 
     header .logo {
-        height: 35px;
+        height: 33px;
     }
 
     header .logo-p {
-        font-size: 15px;
+        font-size: 13px;
     }
 
     .title {
@@ -561,7 +629,7 @@ footer .wrapper {
     }
 
     footer p, footer a {
-        font-size: 8px;
+        font-size: 13px;
     }
 
     .info img { 
@@ -573,13 +641,13 @@ footer .wrapper {
     }
 
     header .social-network {
-        width: 145px;
+        width: 130.78px;
     }
 
     .f {
         display: flex;
         justify-content: center;
-        width: 70px;
+        width: 90px;
     }
 
     header .home {
@@ -598,18 +666,185 @@ footer .wrapper {
         height: 37px; 
     }
 
-    
-}
-
-@media (max-width: 1040px) {
     .news-section {
         width: 740px;
     }
 }
 
 @media (max-width: 740px) {
+    .card1 input {
+        width: 450px;
+    }
+
+    .card {
+        width: 509px;
+        height: 353px;
+    }
+
+    .grid1 {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    h1 { 
+        font-size: 25px;  
+    }
+
+    h2 { 
+        font-size: 20px; 
+    }
+
+    h3 { 
+        font-size: 15px; 
+    }
+
+    header a {
+        font-size: 16px;
+    }
+
+    header .logo {
+        height: 31px;
+    }
+
+    header .logo-p {
+        font-size: 11px;
+    }
+
+    .title {
+        font-size: 25px;
+    }
+
+    .card1 input {
+        font-size: 15px;
+    }
+
+    footer p, footer a {
+        font-size: 11px;
+    }
+
+    .info img { 
+        height: 65px; 
+    }
+
+    header .social-network img {
+        height: 28px;
+    }
+
+    header .social-network {
+        width: 113.73px;
+    }
+
+    .f {
+        display: flex;
+        justify-content: center;
+        width: 80px;
+    }
+
+    header .home {
+        height: 35px;
+    }
+
+    header .home:hover {
+        height: 40px;
+    }
+
     .news-section {
         width: 440px;
+    }
+
+    header {
+        height: 100px;
+    }
+
+    footer {
+        height: 90px;
+    }
+}
+
+@media (max-width: 600px) {
+    .card {
+        width: 409px;
+        height: 253px;
+    }
+
+    .grid1 {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    h1 { 
+        font-size: 20px;  
+    }
+
+    h2 { 
+        font-size: 15px; 
+    }
+
+    h3 { 
+        font-size: 10px; 
+    }
+
+    header a {
+        font-size: 14px;
+    }
+
+    header .logo {
+        height: 29px;
+    }
+
+    header .logo-p {
+        font-size: 9px;
+    }
+
+    .title {
+        font-size: 20px;
+        margin-top: 110px;
+        margin-bottom: 10px;
+    }
+
+    .card1 input {
+        font-size: 10px;
+    }
+
+    footer p, footer a {
+        font-size: 9px;
+    }
+
+    .info img { 
+        height: 60px; 
+    }
+
+    header .social-network img {
+        height: 25px;
+    }
+
+    header .social-network {
+        width: 96.7px;
+    }
+
+    .f {
+        display: flex;
+        justify-content: center;
+        width: 80px;
+    }
+
+    header .home {
+        height: 35px;
+    }
+
+    header .home:hover {
+        height: 40px;
+    }
+
+    .news-section {
+        width: 440px;
+    }
+
+    main .wrapper {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    main .wrapper .info{
+        margin: 30px 0;
     }
 }
 
