--- a/assets/style.css
+++ b/assets/style.css
@@ -39,7 +39,7 @@ a {
     text-decoration: none; 
 }
 
-/*MARK: Header
+/*MARK: --------HEADER--------
 */
 header {
     display: flex;
@@ -113,7 +113,10 @@ header .home:hover {
     width: 125px;
 }
 
-/*MARK: Main
+/*MARK: ---------MAIN---------
+*/
+
+/*MARK: modal
 */
 
 .modal {
@@ -149,6 +152,9 @@ header .home:hover {
 .hover:hover {
     opacity: 0.5;
 }
+
+/*MARK: main
+*/
 
 main {
     display: flex;
@@ -266,7 +272,9 @@ main .wrapper1 {
     background-image: url(../img/photo2.png);
 }
 
-/* Cards */
+/*MARK: cards
+*/
+
 .card {
     width: 649px;
     height: 493px;
@@ -322,7 +330,9 @@ main .wrapper1 {
     background: transparent; 
 }
 
-/* Grid */
+/*MARK: grid
+*/
+
 .grid {
     grid-template-columns: 1fr 1fr;
     display: grid;
@@ -347,7 +357,9 @@ main .wrapper1 {
     margin-left: 10px;
 }
 
-/* News Carousel */
+/*MARK: news carousel
+*/
+
 .news-section {
     width: 1340px;
     margin: 0 auto 80px;
@@ -443,7 +455,7 @@ main .wrapper1 {
     margin-top: 15px;
 }
 
-/*MARK: Footer
+/*MARK: --------FOOTER--------
 */
 
 footer {
@@ -476,7 +488,7 @@ footer .wrapper {
     flex-direction: row;
 }
 
-/*MARK: Adaptive
+/*MARK: ADAPTIVE
 */
 
 @media (max-width: 1476px) {
@@ -496,6 +508,14 @@ footer .wrapper {
     }
 }
 
+@media (max-width: 680px) {
+    .grid1 {
+        grid-template-columns: 1fr;
+    }
+}
+
+/*MARK: 1200px
+*/
 @media (max-width: 1200px) {
     .card {
         width: 629px;
@@ -582,6 +602,8 @@ footer .wrapper {
     }
 }
 
+/*MARK: 1040px
+*/
 @media (max-width: 1040px) {
     .card1 input {
         width: 540px;
@@ -671,6 +693,8 @@ footer .wrapper {
     }
 }
 
+/*MARK: 740px
+*/
 @media (max-width: 740px) {
     .card1 input {
         width: 450px;
@@ -760,6 +784,8 @@ footer .wrapper {
     }
 }
 
+/*MARK:600px
+*/
 @media (max-width: 600px) {
     .card {
         width: 409px;
@@ -845,11 +871,5 @@ footer .wrapper {
 
     main .wrapper .info{
         margin: 30px 0;
-    }
-}
-
-@media (max-width: 680px) {
-    .grid1 {
-        grid-template-columns: 1fr;
     }
 }
